--- a/fsnotify.cabal
+++ b/fsnotify.cabal
@@ -50,7 +50,7 @@ Library
       if os(darwin)
         CPP-Options:    -DOS_Mac
         Other-Modules:  System.FSNotify.OSX
-        Build-Depends:  hfsevents >= 0.1.3, system-filepath, system-fileio
+        Build-Depends:  hfsevents >= 0.1.3
 
 Test-Suite test
   Type:                 exitcode-stdio-1.0
